ros_embedded/log/build_2023-06-03_13-10-41/web_server/stdout_stderr.log
running egg_info
creating ../../build/web_server/web_server.egg-info
writing ../../build/web_server/web_server.egg-info/PKG-INFO
writing dependency_links to ../../build/web_server/web_server.egg-info/dependency_links.txt
writing entry points to ../../build/web_server/web_server.egg-info/entry_points.txt
writing requirements to ../../build/web_server/web_server.egg-info/requires.txt
writing top-level names to ../../build/web_server/web_server.egg-info/top_level.txt
writing manifest file '../../build/web_server/web_server.egg-info/SOURCES.txt'
reading manifest file '../../build/web_server/web_server.egg-info/SOURCES.txt'
writing manifest file '../../build/web_server/web_server.egg-info/SOURCES.txt'
running build
running build_py
creating /home/pi/ros_embedded/build/web_server/build
creating /home/pi/ros_embedded/build/web_server/build/lib
creating /home/pi/ros_embedded/build/web_server/build/lib/web_server
copying web_server/__init__.py -> /home/pi/ros_embedded/build/web_server/build/lib/web_server
copying web_server/web_server.py -> /home/pi/ros_embedded/build/web_server/build/lib/web_server
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
creating /home/pi/ros_embedded/install/web_server/lib/python3.10/site-packages/web_server
copying /home/pi/ros_embedded/build/web_server/build/lib/web_server/__init__.py -> /home/pi/ros_embedded/install/web_server/lib/python3.10/site-packages/web_server
copying /home/pi/ros_embedded/build/web_server/build/lib/web_server/web_server.py -> /home/pi/ros_embedded/install/web_server/lib/python3.10/site-packages/web_server
byte-compiling /home/pi/ros_embedded/install/web_server/lib/python3.10/site-packages/web_server/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/pi/ros_embedded/install/web_server/lib/python3.10/site-packages/web_server/web_server.py to web_server.cpython-310.pyc
  File "/home/pi/ros_embedded/install/web_server/lib/python3.10/site-packages/web_server/web_server.py", line 13
    print(resquests.get("http://%s/button/a/count" % server_ip)
         ^
SyntaxError: '(' was never closed

running install_data
creating /home/pi/ros_embedded/install/web_server/share/ament_index
creating /home/pi/ros_embedded/install/web_server/share/ament_index/resource_index
creating /home/pi/ros_embedded/install/web_server/share/ament_index/resource_index/packages
error: can't copy 'resource/web_server': doesn't exist or not a regular file
